adicioanando um href no footer

--- a/index.html
+++ b/index.html
@@ -194,9 +194,8 @@
 
     <footer>
 
-        <div id="footer-container">
-            
-            <span> Senac 2023 - Direitos reservados </span>
+        <div id="footer-container">            
+            <a  target="_blank" href="https://github.com/dgmatias/carnaval_senac"> Senac 2023 - Direitos reservados </a> 
         </div>
 
     </footer>
